--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -211,13 +211,6 @@ jobs:
       run: |
         cd kernel_workspace/kernel_platform
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch ./common/
-        #lz4k
-        if [[ "${{ github.event.inputs.ZRAM }}" == "true" ]]; then
-          cp -r ../kernelsu_patch/zram/lz4k/include/linux/* ./common/include/linux
-          cp -r ../kernelsu_patch/zram/lz4k/lib/* ./common/lib
-          cp -r ../kernelsu_patch/zram/lz4k/crypto/* ./common/crypto
-          cp -r ../kernelsu_patch/zram/lz4k_oplus ./common/lib/
-        fi
         # 应用补丁
         cd ./common
         patch -p1 < 50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch || true
@@ -248,40 +241,34 @@ jobs:
       if: github.event.inputs.ZRAM == 'true'
       run: |
         cd kernel_workspace/kernel_platform
-        # cp -r ../kernelsu_patch/zram/lz4k/include/linux/* ./common/include/linux
-        # cp -r ../kernelsu_patch/zram/lz4k/lib/* ./common/lib
-        # cp -r ../kernelsu_patch/zram/lz4k/crypto/* ./common/crypto
-        # cp -r ../kernelsu_patch/zram/lz4k_oplus ./common/lib/
-        # echo "CONFIG_ZSMALLOC=y" >> ./common/arch/arm64/configs/gki_defconfig
-        # echo "CONFIG_CRYPTO_LZ4HC=y" >> ./common/arch/arm64/configs/gki_defconfig
-        # echo "CONFIG_CRYPTO_LZ4K=y" >> ./common/arch/arm64/configs/gki_defconfig
-        # echo "CONFIG_CRYPTO_LZ4KD=y" >> ./common/arch/arm64/configs/gki_defconfig
-        # echo "CONFIG_CRYPTO_842=y" >> ./common/arch/arm64/configs/gki_defconfig
-        # echo "CONFIG_CRYPTO_LZ4K_OPLUS=y" >> ./common/arch/arm64/configs/gki_defconfig
-        # echo "CONFIG_ZRAM_WRITEBACK=y" >> ./common/arch/arm64/configs/gki_defconfig
+        cp -r ../kernelsu_patch/zram/lz4k/include/linux/* ./common/include/linux
+        cp -r ../kernelsu_patch/zram/lz4k/lib/* ./common/lib
+        cp -r ../kernelsu_patch/zram/lz4k/crypto/* ./common/crypto
+        cp -r ../kernelsu_patch/zram/lz4k_oplus ./common/lib/
+        CONFIG_FILE=./common/arch/arm64/configs/gki_defconfig
+        if grep -q "CONFIG_ZRAM" -- "$CONFIG_FILE"; then
+          sed -i 's/CONFIG_ZRAM=m/CONFIG_ZRAM=y/g' "$CONFIG_FILE"
+        else
+          echo "CONFIG_ZRAM=y" >> "$CONFIG_FILE"
+        fi
+        if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
+          sed -i 's/CONFIG_ZSMALLOC=m/CONFIG_ZSMALLOC=y/g' "$CONFIG_FILE"
+        else
+          echo "CONFIG_ZSMALLOC=y" >> "$CONFIG_FILE"
+        fi
+        echo "CONFIG_CRYPTO_LZ4HC=y" >> "$CONFIG_FILE"
+        echo "CONFIG_CRYPTO_LZ4K=y" >> "$CONFIG_FILE"
+        echo "CONFIG_CRYPTO_LZ4KD=y" >> "$CONFIG_FILE"
+        echo "CONFIG_CRYPTO_842=y" >> "$CONFIG_FILE"
+        echo "CONFIG_CRYPTO_LZ4K_OPLUS=y" >> "$CONFIG_FILE"
+        echo "CONFIG_ZRAM_WRITEBACK=y" >> "$CONFIG_FILE"
         cd ./common
         cp ../../kernelsu_patch/zram/zram_patch/lz4kd.patch ./
         patch -p1 -F 3 < lz4kd.patch || true
         cp ../../kernelsu_patch/zram/zram_patch/lz4k_oplus.patch ./
         patch -p1 -F 3 < lz4k_oplus.patch || true
-        # CONFIG_FILE=./arch/arm64/configs/gki_defconfig
-        # if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
-        #   sed -i 's/CONFIG_ZRAM=m/CONFIG_ZRAM=y/g' "$CONFIG_FILE"
-        # else
-        #   echo "CONFIG_ZRAM=y" >> "$CONFIG_FILE"
-        # fi
-        # if grep -q "CONFIG_ZSMALLOC" -- "$CONFIG_FILE"; then
-        #   sed -i 's/CONFIG_ZSMALLOC=m/CONFIG_ZSMALLOC=y/g' "$CONFIG_FILE"
-        # else
-        #   echo "CONFIG_ZSMALLOC=y" >> "$CONFIG_FILE"
-        # fi
-        # rm "android/gki_aarch64_modules"
-        # touch "android/gki_aarch64_modules"
-        # echo "CONFIG_CRYPTO_LZ4HC=y" >> "$CONFIG_FILE"
-        # echo "CONFIG_CRYPTO_LZ4K=y" >> "$CONFIG_FILE"
-        # echo "CONFIG_CRYPTO_LZ4KD=y" >> "$CONFIG_FILE"
-        # echo "CONFIG_CRYPTO_842=y" >> "$CONFIG_FILE"
-        # echo "CONFIG_ZRAM_WRITEBACK=y" >> "$CONFIG_FILE"
+        rm "android/gki_aarch64_modules"
+        touch "android/gki_aarch64_modules"
         
     - name: 添加 SUSFS 配置设置
       if: github.event.inputs.SUSFS == 'true'
@@ -320,17 +307,6 @@ jobs:
         echo "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y" >> ./common/arch/arm64/configs/gki_defconfig
         echo "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y" >> ./common/arch/arm64/configs/gki_defconfig
         echo "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y" >> ./common/arch/arm64/configs/gki_defconfig
-
-        # Add ZRAM
-        if [[ "${{ github.event.inputs.ZRAM }}" == "true" ]]; then
-          echo "CONFIG_ZSMALLOC=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_CRYPTO_LZ4HC=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_CRYPTO_LZ4K=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_CRYPTO_LZ4KD=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_CRYPTO_842=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_CRYPTO_LZ4K_OPLUS=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_ZRAM_WRITEBACK=y" >> ./common/arch/arm64/configs/gki_defconfig
-        fi
         
         # 移除 check_defconfig
         sed -i 's/check_defconfig//' ./common/build.config.gki
@@ -338,7 +314,7 @@ jobs:
     - name: 编译内核
       run: |
         cd kernel_workspace
-        LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki
+        LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki -j$(nproc --all)
         
     - name: kpm 补丁
       if: github.event.inputs.KPM == 'true' && github.event.inputs.KSU_VERSION == 'sukisu'
