--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -314,7 +314,8 @@ jobs:
     - name: 编译内核
       run: |
         cd kernel_workspace
-        LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki -j$(nproc --all)
+        LTO=thin SYSTEM_DLKM_RE_SIGN=0 BUILD_SYSTEM_DLKM=0 KMI_SYMBOL_LIST_STRICT_MODE=0 \
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh ${CPUD} gki
         
     - name: kpm 补丁
       if: github.event.inputs.KPM == 'true' && github.event.inputs.KSU_VERSION == 'sukisu'
