--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -88,7 +88,7 @@ jobs:
       run: |
         mkdir kernel_workspace && cd kernel_workspace
         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b refs/heads/oneplus/${CPU} -m ${FEIL}.xml --depth=1
-        repo sync -c -j$(nproc --all) --no-tags
+        repo sync  -c -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
         rm -rf ./AnyKernel3/.git
         git clone https://github.com/yuanqiongyoukong/kernelsu_patch.git --depth 1
