--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -47,7 +47,7 @@ on:
         type: boolean
         description: "是否启用添加更多的ZRAM算法？"
         required: true 
-        default: true 
+        default: false 
       KERNEL_NAME:
         description: "自定义内核版本号"
         required: false 
@@ -265,8 +265,8 @@ jobs:
         cd ./common
         cp ../../kernelsu_patch/zram/zram_patch/lz4kd.patch ./
         patch -p1 -F 3 < lz4kd.patch || true
-        # cp ../../kernelsu_patch/zram/zram_patch/lz4k_oplus.patch ./
-        # patch -p1 -F 3 < lz4k_oplus.patch || true
+        cp ../../kernelsu_patch/zram/zram_patch/lz4k_oplus.patch ./
+        patch -p1 -F 3 < lz4k_oplus.patch || true
         rm "android/gki_aarch64_modules"
         touch "android/gki_aarch64_modules"
         
