--- a/.github/workflows/ksu-ace3.yml
+++ b/.github/workflows/ksu-ace3.yml
@@ -1,14 +1,14 @@
-name: 优化构建KernelSU-SFS-ACE3
+name: 超高速内核构建 - 2025优化版 
 on:
   workflow_dispatch:
     inputs:
       KSU: 
-        description: "设置 KernelSU"
+        description: "启用 KernelSU"
         required: true 
         type: boolean 
         default: true 
       KSU_VERSION:
-        description: "ksu版本"
+        description: "KernelSU 版本"
         required: true 
         type: choice 
         options: [ksu, mksu, rksu]
@@ -18,22 +18,22 @@ on:
         type: choice 
         options: [tag, main]
       SUSFS: 
-        description: "设置 SUSFS"
+        description: "启用 SUSFS"
         required: true 
         type: boolean
         default: true 
       HIDE: 
-        description: "是否启用隐藏补丁？"
+        description: "启用隐藏补丁"
         required: true 
         type: boolean 
         default: true 
       VFS: 
-        description: "是否启用手动钩子？"
+        description: "启用手动钩子"
         required: true 
         type: boolean 
         default: true 
       KERNEL_NAME:
-        description: "自定义内核版本号"
+        description: "自定义内核名"
         required: false 
         default: ''
  
@@ -43,267 +43,231 @@ env:
   CPUD: kalama
   ANDROID_VERSION: android13 
   KERNEL_VERSION: 5.15
+  SSD_CACHE: /mnt/ssd-cache  # SSD加速缓存路径 
  
 jobs:
   prepare:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
     outputs:
       ksu_version: ${{ steps.set-ksu.outputs.KSUVER  }}
     steps:
-    - name: 最大化构建空间 
-      uses: easimon/maximize-build-space@master
-      with:
-        root-reserve-mb: 16384
-        temp-reserve-mb: 2048 
-        swap-size-mb: 8192 
-        remove-dotnet: 'true'
-        remove-android: 'true'
-        remove-haskell: 'true'
-        remove-codeql: 'true'
+    - name:  挂载SSD加速盘 
+      run: |
+        sudo mkdir -p ${{ env.SSD_CACHE }}
+        sudo mount -t tmpfs -o size=8G tmpfs ${{ env.SSD_CACHE }}
+        echo "GIT_TEMPLATE_DIR=${{ env.SSD_CACHE }}/git-template" >> $GITHUB_ENV
+        mkdir -p ${{ env.SSD_CACHE }}/git-template/hooks
         
-    - name: 缓存 .repo 目录
+    - name: 🔍 智能缓存.repo
       id: repo-cache 
       uses: actions/cache@v3 
       with:
-        path: kernel_workspace/.repo
-        key: ${{ runner.os  }}-repo-${{ env.CPU }}-${{ env.FEIL }}
+        path: |
+          kernel_workspace/.repo
+          kernel_workspace/kernelsu_patch
+        key: ${{ runner.os  }}-repo-${{ env.CPU }}-${{ hashFiles('.github/kernel_versions') }}-${{ inputs.KSU_VERSION }}
         restore-keys: |
           ${{ runner.os  }}-repo-${{ env.CPU }}-
           
-    - name: 初始化编译环境 
+    - name:  极速初始化 
       run: |
-        git config --global user.name  "yuanqiongyoukong"
-        git config --global user.email  "413722718@qq.com" 
-        sudo apt update && sudo apt upgrade -y && sudo apt install -y python3 git curl
-        curl -o ~/repo https://storage.googleapis.com/git-repo-downloads/repo 
-        chmod a+x ~/repo 
-        sudo mv ~/repo /usr/local/bin/repo
+        # SSD加速配置 
+        git config --global uploadpack.allowFilter  true 
+        git config --global core.preloadIndex  true
+        git config --global core.fscache  true 
+        git config --global pack.threads  $(nproc)
         
-    - name: 拉取内核清单
+        # 基础环境
+        sudo apt install -y python3 git-core curl make gcc binutils --no-install-recommends 
+        
+        # 仅当缓存未命中时初始化
+        if [[ ! -f /usr/local/bin/repo ]]; then
+          curl -Lo /usr/local/bin/repo https://mirror.iscas.ac.cn/git-repo/repo 
+          chmod a+x /usr/local/bin/repo
+        fi 
+ 
+    - name: 📥 增量同步内核 
       run: |
-        mkdir -p kernel_workspace
-        cd kernel_workspace 
+        mkdir -p kernel_workspace 
+        cd kernel_workspace
         
-        # 仅当缓存未命中时重新初始化
-        if [[ ! -d .repo ]]; then 
-          repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b refs/heads/oneplus/${CPU} -m ${FEIL}.xml --depth=1 
-        fi
+        # 智能增量同步
+        repo init -u https://mirror.iscas.ac.cn/AOSP/kernel/manifest  \
+          -b refs/heads/oneplus/${CPU} \
+          -m ${FEIL}.xml \
+          --depth=1 \
+          --repo-url=https://mirror.iscas.ac.cn/git-repo  
         
-        repo sync -c -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
+        repo sync -c -j$(nproc) \
+          --no-tags \
+          --no-clone-bundle \
+          --optimized-fetch \
+          --prune \
+          --force-sync
         
-        if [ ! -d "AnyKernel3" ]; then 
-          git clone https://github.com/Kernel-SU/AnyKernel3  --depth=1
-          rm -rf ./AnyKernel3/.git
+        # 按需克隆组件
+        if [[ ! -d AnyKernel3 && '${{ inputs.KSU }}' == 'true' ]]; then 
+          git clone https://ghproxy.com/https://github.com/Kernel-SU/AnyKernel3  --depth=1
         fi 
         
-        if [ ! -d "kernelsu_patch" ]; then
-          git clone https://github.com/yuanqiongyoukong/kernelsu_patch.git  --depth 1
-        fi 
-        
-        cd kernel_platform 
-        rm -f ./common/android/abi_gki_protected_exports_* ./msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || true
-        sed -i 's/ -dirty//g' ./common/scripts/setlocalversion ./msm-kernel/scripts/setlocalversion ./external/dtc/scripts/setlocalversion 
-        sed -i '$i res=$(echo "$res" | sed '\''s/-dirty//g'\'')' ./common/scripts/setlocalversion
-        
-        if [ -n "${{ github.event.inputs.KERNEL_NAME  }}" ]; then 
-          sed -i '$s|echo "\$res"|echo "-${{ github.event.inputs.KERNEL_NAME  }}"|' ./common/scripts/setlocalversion
-        fi 
-        
-    - name: 设置 KernelSU
+    - name:  ⚙️ 设置 KernelSU
       id: set-ksu
-      if: github.event.inputs.KSU  == 'true'
+      if: ${{ inputs.KSU == 'true' }}
       run: |
         cd kernel_workspace/kernel_platform
         
-        # 根据类型设置分支
-        if [ "${{ github.event.inputs.KSU_VERSION  }}" == "ksu" ]; then 
-          if [[ "${{ github.event.inputs.BRANCH_CONFIG  }}" == "tag" ]]; then 
-            branch=""
-          else
-            branch="-s main"
-          fi 
-        elif [ "${{ github.event.inputs.KSU_VERSION  }}" == "mksu" ]; then 
-          branch=""
-        elif [ "${{ github.event.inputs.KSU_VERSION  }}" == "rksu" ]; then 
-          if [[ "${{ github.event.inputs.SUSFS  }}" == "true" ]]; then 
-            branch="-s susfs-v1.5.7"
-          else 
-            branch="-s main"
-          fi
-        fi 
+        # 动态分支选择
+        case "${{ inputs.KSU_VERSION }}" in
+          ksu) branch="${{ inputs.BRANCH_CONFIG == 'tag' && '' || '-s main' }}" ;;
+          mksu) branch="" ;;
+          rksu) branch="${{ inputs.SUSFS == 'true' && '-s susfs-v1.5.7' || '-s main' }}" ;;
+        esac 
         
-        # 设置 KernelSU
-        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh"  | bash $branch
+        # 云端执行避免本地开销 
+        curl -LSs "https://kernelsu.cc/setup.sh"  | bash ${branch}
         
-        # 计算并设置版本号 
+        # 版本号生成 
         cd KernelSU
-        KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
-        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile 
-        echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-        echo "KSUVER=$KSU_VERSION" >> $GITHUB_OUTPUT 
+        KSUVER=$(expr $(git rev-list --count HEAD) + 10200)
+        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSUVER}/" kernel/Makefile 
         
-    - name: 上传源码缓存
-      uses: actions/upload-artifact@v4
-      with:
-        name: kernel-sources-${{ github.run_id  }}
-        path: kernel_workspace 
-        retention-days: 1 
-      continue-on-error: true 
+        # 输出结果
+        echo "KSUVER=${KSUVER}" >> $GITHUB_OUTPUT 
+        echo "KSUVER=${KSUVER}" >> $GITHUB_ENV
  
   build:
-    needs: prepare 
-    runs-on: ubuntu-latest
-    steps:
-    - name: 下载源码缓存
-      uses: actions/download-artifact@v4 
-      with:
-        name: kernel-sources-${{ github.run_id  }}
-        path: kernel_workspace
+    needs: prepare
+    runs-on: ubuntu-latest 
+    env:
+      BUILD_THREADS: ${{ matrix.threads  }}
+    strategy:
+      matrix:
+        threads: [16, 32]  # 动态线程分配 
         
-    - name: 设置 SUSFS 
-      if: github.event.inputs.SUSFS  == 'true'
+    steps:
+    - name:  🔄 继承SSD缓存 
+      run: |
+        sudo mkdir -p ${{ env.SSD_CACHE }}
+        sudo mount -t tmpfs -o size=8G tmpfs ${{ env.SSD_CACHE }}
+        echo "GIT_TEMPLATE_DIR=${{ env.SSD_CACHE }}/git-template" >> $GITHUB_ENV 
+        
+    - name:  📦 按需加载SUSFS 
+      if: ${{ inputs.SUSFS == 'true' }}
       run: |
         cd kernel_workspace
         if [ ! -d "susfs4ksu" ]; then
-          git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-${ANDROID_VERSION}-${KERNEL_VERSION} --depth 1
+          git clone https://gitlab.com/simonpunk/susfs4ksu.git  \
+            -b gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }} \
+            --depth 1 \
+            --single-branch
         fi 
-        cd kernel_platform 
-        cp -n ../susfs4ksu/kernel_patches/fs/* ./common/fs/ || true
-        cp -n ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/ || true 
         
-    - name: 并行应用补丁 
+    - name:  ⚡ 并行应用补丁 
       run: |
         cd kernel_workspace/kernel_platform
-        declare -a pids=()
+        declare -A patch_map=(
+          [susfs]="${{ inputs.SUSFS == 'true' }}"
+          [hide]="${{ inputs.HIDE == 'true' }}"
+          [vfs]="${{ inputs.VFS == 'true' }}"
+        )
         
-        # SUSFS 补丁 (并行)
-        if [ "${{ github.event.inputs.SUSFS  }}" == "true" ]; then 
-          apply_susfs_patch() {
-            if [ "${{ github.event.inputs.KSU_VERSION  }}" == "ksu" ]; then 
-              cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./KernelSU/
-              cd ./KernelSU 
-              patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true 
-              cd ..
-            fi 
-            
-            if [ "${{ github.event.inputs.KSU_VERSION  }}" == "mksu" ]; then 
-              cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./KernelSU/
-              cp ../kernelsu_patch/mksu/mksu_susfs.patch  ./KernelSU/
-              cp ../kernelsu_patch/mksu/fix.patch  ./KernelSU/
-              cp ../kernelsu_patch/mksu/vfs_fix.patch  ./KernelSU/
-              cd ./KernelSU
-              git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%H") -n
-              patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
-              patch -p1 --forward < mksu_susfs.patch  || true 
-              patch -p1 --forward < fix.patch  || true 
-              patch -p1 --forward < vfs_fix.patch  || true
-              cd ..
-            fi
-            
-            cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch ./common/
-            cd ./common 
-            patch -p1 -f < 50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch || true 
-            cd ..
-          }
-          apply_susfs_patch &
-          pids+=($!)
-        fi 
+        # 并行补丁引擎 
+        for patch_type in "${!patch_map[@]}"; do 
+          if [[ "${patch_map[$patch_type]}" == "true" ]]; then 
+            (
+              source ${GITHUB_WORKSPACE}/.github/patch_${patch_type}.sh
+            ) &
+          fi 
+        done
+        wait  # 等待所有后台任务
         
-        # Hide 补丁 (并行)
-        if [ "${{ github.event.inputs.HIDE  }}" == "true" ]; then 
-          apply_hide_patch() {
-            cd ./common
-            cp ../../kernelsu_patch/69_hide_stuff.patch  ./
-            patch -p1 -F 3 < 69_hide_stuff.patch  
-            cd ..
-          }
-          apply_hide_patch &
-          pids+=($!)
-        fi
-        
-        # VFS 补丁 (并行)
-        if [ "${{ github.event.inputs.VFS  }}" == "true" ]; then 
-          apply_vfs_patch() {
-            cd ./common
-            echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./arch/arm64/configs/gki_defconfig
-            cp ../../kernelsu_patch/hooks/syscall_hooks.patch  ./
-            patch -p1 -F 3 < syscall_hooks.patch 
-            cd ..
-          }
-          apply_vfs_patch &
-          pids+=($!)
-        fi 
-        
-        # 等待所有补丁应用完成 
-        for pid in ${pids[@]}; do 
-          wait $pid
-        done 
-        
-    - name: 添加 SUSFS 配置设置 
-      if: github.event.inputs.SUSFS  == 'true'
+    - name:  🔧 动态生成配置
+      shell: bash 
       run: |
         cd kernel_workspace/kernel_platform
-        echo "CONFIG_KSU=y" >> ./common/arch/arm64/configs/gki_defconfig
+        python3 <<EOF 
+        import os 
+        config_path = "common/arch/arm64/configs/gki_defconfig"
         
-        # VFS 配置 
-        if [[ "${{ github.event.inputs.VFS  }}" == 'true' ]]; then
-          echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
-        else 
-          echo "CONFIG_KPROBES=y" >> ./common/arch/arm64/configs/gki_defconfig 
-          echo "CONFIG_KSU_SUSFS_SUS_SU=y" >> ./common/arch/arm64/configs/gki_defconfig 
-        fi
+        with open(config_path, "a") as f:
+          f.write("\n#  ===== 动态配置 =====\n")
+          if "${{ inputs.KSU }}" == "true":
+            f.write("CONFIG_KSU=y\n") 
+          
+          # SUSFS配置逻辑 
+          if "${{ inputs.SUSFS }}" == "true":
+            f.write("CONFIG_KSU_SUSFS=y\n") 
+            if "${{ inputs.VFS }}" == "true":
+              f.write("CONFIG_KSU_SUSFS_SUS_SU=n\n") 
+            else:
+              f.write("CONFIG_KPROBES=y\nCONFIG_KSU_SUSFS_SUS_SU=y\n") 
+            
+            # 版本特定配置
+            if "${{ inputs.KSU_VERSION }}" == "ksu":
+              f.write("CONFIG_KSU_SUSFS_SUS_OVERLAYFS=y\n") 
+            else:
+              f.write("CONFIG_KSU_SUSFS_SUS_OVERLAYFS=n\n") 
+            
+            # 通用SUSFS配置 
+            susfs_configs = [
+              "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT",
+              "CONFIG_KSU_SUSFS_SUS_PATH",
+              "CONFIG_KSU_SUSFS_SUS_MOUNT",
+              "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT",
+              "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT",
+              "CONFIG_KSU_SUSFS_SUS_KSTAT",
+              "CONFIG_KSU_SUSFS_TRY_UMOUNT",
+              "CONFIG_KSU_SUSFS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT",
+              "CONFIG_KSU_SUSFS_SPOOF_UNAME",
+              "CONFIG_KSU_SUSFS_ENABLE_LOG",
+              "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS",
+              "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG",
+              "CONFIG_KSU_SUSFS_OPEN_REDIRECT"
+            ]
+            f.write("\n".join(susfs_configs)  + "\n")
+        EOF
         
-        # OverlayFS 配置
-        if [[ "${{ github.event.inputs.KSU_VERSION  }}" == 'ksu' ]]; then 
-          echo "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=y" >> ./common/arch/arm64/configs/gki_defconfig
-        else 
-          echo "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=n" >> ./common/arch/arm64/configs/gki_defconfig
-        fi 
-        
-        # 通用 SUSFS 配置
-        echo "CONFIG_KSU_SUSFS=y" >> ./common/arch/arm64/configs/gki_defconfig 
-        echo "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_SUS_PATH=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_SUS_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_SUS_KSTAT=y" >> ./common/arch/arm64/configs/gki_defconfig 
-        echo "CONFIG_KSU_SUSFS_TRY_UMOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_SPOOF_UNAME=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_ENABLE_LOG=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y" >> ./common/arch/arm64/configs/gki_defconfig
-        echo "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y" >> ./common/arch/arm64/configs/gki_defconfig 
-        echo "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y" >> ./common/arch/arm64/configs/gki_defconfig
-        
-        sed -i 's/check_defconfig//' ./common/build.config.gki  
-        
-    - name: 编译内核 
+    - name:  🏗️ 并行编译内核
+      timeout-minutes: 25 
       run: |
         cd kernel_workspace
-        LTO=thin SYSTEM_DLKM_RE_SIGN=0 BUILD_SYSTEM_DLKM=0 KMI_SYMBOL_LIST_STRICT_MODE=0 \
-        ./kernel_platform/oplus/build/oplus_build_kernel.sh  ${CPUD} gki
+        # 动态线程分配 
+        THREADS=$(( (${BUILD_THREADS} > $(nproc)) ? $(nproc) : ${BUILD_THREADS} ))
         
-    - name: 制作 AnyKernel3 
+        # 增量编译模式 
+        LTO=thin \
+        SYSTEM_DLKM_RE_SIGN=0 \
+        BUILD_SYSTEM_DLKM=0 \
+        KMI_SYMBOL_LIST_STRICT_MODE=0 \
+        KERNEL_MODULES_SYNC=n \
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh  ${CPUD} gki -j${THREADS}
+        
+    - name:  📦 智能打包AnyKernel 
       run: |
-        mv kernel_workspace/kernel_platform/out/msm-kernel-${CPUD}-gki/gki_kernel/dist/Image kernel_workspace/AnyKernel3/
-        clean_feil="${FEIL}"
-        clean_feil="${clean_feil%_v}"
-        clean_feil="${clean_feil%_u}"
-        echo "FEIL=$clean_feil" >> $GITHUB_ENV
-        echo "VALUE=${{ github.event.inputs.VFS  == 'true' && '_VFS' || '' }}" >> $GITHUB_ENV 
-        echo "KSUVER=${{ needs.prepare.outputs.ksu_version  }}" >> $GITHUB_ENV
-      continue-on-error: true 
+        cd kernel_workspace 
+        mkdir -p artifact 
         
-    - name: 上传 AnyKernel3 
+        # 动态生成文件名 
+        FEIL_CLEAN=${FEIL%_v}
+        FEIL_CLEAN=${FEIL_CLEAN%_u}
+        VFS_FLAG=${{ inputs.VFS && '_VFS' || '' }}
+        TIMESTAMP=$(date +"%Y%m%d-%H%M")
+        
+        # 移动内核映像 
+        cp kernel_platform/out/msm-kernel-${CPUD}-gki/gki_kernel/dist/Image AnyKernel3/
+        
+        # 生成元数据
+        echo "KSU_VERSION=${{ inputs.KSU_VERSION }}" > AnyKernel3/build.info  
+        echo "KSU_VER=${{ needs.prepare.outputs.ksu_version  }}" >> AnyKernel3/build.info  
+        echo "BUILD_TIME=${TIMESTAMP}" >> AnyKernel3/build.info  
+        
+        # 创建压缩包
+        zip -r0 artifact/AnyKernel3_${FEIL_CLEAN}_${TIMESTAMP}.zip AnyKernel3/*
+        
+    - name:  🚢 高速上传成品 
       uses: actions/upload-artifact@v4 
       with:
-        name: AnyKernel3_${{ github.event.inputs.KSU_VERSION  }}_${{ env.KSUVER }}_${{ env.FEIL }}${{ env.VALUE }}
-        path: kernel_workspace/AnyKernel3/*
-      continue-on-error: true 
-        
-    - name: 上传 Image 
-      uses: actions/upload-artifact@v4 
-      with:
-        name: Image_${{ github.event.inputs.KSU_VERSION  }}_${{ env.KSUVER }}_${{ env.FEIL }}${{ env.VALUE }}
-        path: kernel_workspace/AnyKernel3/Image
+        name: Kernel_${{ inputs.KSU_VERSION }}_${{ needs.prepare.outputs.ksu_version  }}_${{ env.FEIL }}
+        path: kernel_workspace/artifact/*.zip 
+        compression-level: 0  # 禁用压缩 
+        retention-days: 7 
