--- a/.github/workflows/ksu-ace3.yml
+++ b/.github/workflows/ksu-ace3.yml
@@ -161,7 +161,7 @@ jobs:
       run: |
         cd kernel_workspace/kernel_platform
         if [[ "${{ github.event.inputs.SUSFS }}" == "true" ]]; then
-          echo "BRANCH=-s susfs-v1.5.7" >> $GITHUB_ENV
+          echo "BRANCH=-s susfs-main" >> $GITHUB_ENV
         else
           echo "BRANCH=-s main" >> $GITHUB_ENV
         fi
