--- a/.github/workflows/KernelSU-SFS-ACE3.yml
+++ b/.github/workflows/KernelSU-SFS-ACE3.yml
@@ -242,9 +242,10 @@ jobs:
         
     - name: 制作 AnyKernel3
       run: |
+        cd kernel_workspace
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
         rm -rf ./AnyKernel3/.git
-        mv kernel_workspace/kernel_platform/out/msm-kernel-${CPUD}-gki/gki_kernel/dist/Image kernel_workspace/AnyKernel3/
+        mv ./kernel_platform/out/msm-kernel-${CPUD}-gki/gki_kernel/dist/Image ./AnyKernel3/
         clean_feil="${FEIL}"
         clean_feil="${clean_feil%_v}"  # 去掉结尾的 _v（如果有）
         clean_feil="${clean_feil%_u}"  # 去掉结尾的 _u（如果有）
@@ -257,4 +258,3 @@ jobs:
       with:
         name: AnyKernel3_${{ github.event.inputs.KSU_VERSION }}_${{ env.KSUVER }}_${{ env.FEIL }}${{ env.VALUE }}
         path: kernel_workspace/AnyKernel3/*
-      continue-on-error: true 
