--- a/.github/workflows/KernelSU-SFS-ACE3.yml
+++ b/.github/workflows/KernelSU-SFS-ACE3.yml
@@ -251,6 +251,7 @@ jobs:
         if [[ "${{ github.event.inputs.VFS }}" == 'true' ]]; then
           echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> "$CONFIG_FILE"
           echo "CONFIG_KSU_MANUAL_HOOK=y" >> "$CONFIG_FILE"
+          echo "CONFIG_KSU_LSM_SECURITY_HOOKS=n" >> "$CONFIG_FILE"
         else
           echo "CONFIG_KPROBES=y" >>  "$CONFIG_FILE"
           echo "CONFIG_KSU_KPROBES_HOOK=y" >> "$CONFIG_FILE"
@@ -280,7 +281,7 @@ jobs:
         echo "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y" >> "$CONFIG_FILE"
         echo "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y" >> "$CONFIG_FILE"
         
-        # 添加 5.10和5.15系内核LTO配置
+        # 添加 LTO配置
         sed -i -e 's/^# CONFIG_LTO is not set/CONFIG_LTO=y/' \
           -e 's/^CONFIG_LTO=n/CONFIG_LTO=y/' "$CONFIG_FILE"
         grep -q '^CONFIG_LTO=y' "$CONFIG_FILE" || echo 'CONFIG_LTO=y' >> "$CONFIG_FILE"
@@ -332,64 +333,48 @@ jobs:
     - name: 制作 AnyKernel3
       run: |
         # mv kernel_workspace/kernel_platform/out/msm-kernel-${CPUD}-gki/gki_kernel/dist/Image ./AnyKernel3/
-          dir1="kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.BUILD_METHOD }}/dist/"
-          dir2="kernel_workspace/kernel_platform/bazel-out/k8-fastbuild/bin/msm-kernel/${{ github.event.inputs.CPUD }}_gki_kbuild_mixed_tree/"
-          dir3="kernel_workspace/kernel_platform/out/msm-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.BUILD_METHOD }}/dist/"
-          dir4="kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.BUILD_METHOD }}/gki_kernel/common/arch/arm64/boot/"
-          dir5="kernel_workspace/kernel_platform/out/msm-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.BUILD_METHOD }}/gki_kernel/common/arch/arm64/boot/"
-          target1="./AnyKernel3/"
-          target2="./kernel_workspace/kernel"
+        dir1="kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/"
+        dir2="kernel_workspace/kernel_platform/bazel-out/k8-fastbuild/bin/msm-kernel/${{ github.event.inputs.CPUD }}_gki_kbuild_mixed_tree/"
+        dir3="kernel_workspace/kernel_platform/out/msm-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.CPUD }}-gki/dist/"
+        dir4="kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/gki_kernel/common/arch/arm64/boot/"
+        dir5="kernel_workspace/kernel_platform/out/msm-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.CPUD }}-gki/gki_kernel/common/arch/arm64/boot/"
+        dir6="kernel_workspace/kernel_platform/out/msm-kernel-${CPUD}-gki/gki_kernel/dist/"
+        
+        # 查找 Image 文件
+        if find "$dir1" -name "Image" | grep -q "Image"; then
+          image_path="$dir1"Image
+        elif find "$dir2" -name "Image" | grep -q "Image"; then
+          image_path="$dir2"Image
+        elif find "$dir3" -name "Image" | grep -q "Image"; then
+          image_path="$dir3"Image
+        elif find "$dir4" -name "Image" | grep -q "Image"; then
+          image_path="$dir4"Image
+        elif find "$dir5" -name "Image" | grep -q "Image"; then
+          image_path="$dir5"Image
+        elif find "$dir6" -name "Image" | grep -q "Image"; then
+          image_path="$dir6"Image
+        else
+          image_path=$(find "./kernel_workspace/kernel_platform/common/out/" -name "Image" | head -n 1)
+        fi
 
-          # 查找 Image 文件
-          if find "$dir1" -name "Image" | grep -q "Image"; then
-            image_path="$dir1"Image
-          elif find "$dir2" -name "Image" | grep -q "Image"; then
-            image_path="$dir2"Image
-          elif find "$dir3" -name "Image" | grep -q "Image"; then
-            image_path="$dir3"Image
-          elif find "$dir4" -name "Image" | grep -q "Image"; then
-            image_path="$dir4"Image
-          elif find "$dir5" -name "Image" | grep -q "Image"; then
-            image_path="$dir5"Image
+        # 拷贝 Image
+        if [ -n "$image_path" ] && [ -f "$image_path" ]; then
+          mkdir -p "$dir1"
+          if [ "$(realpath "$image_path")" != "$(realpath "$dir1"Image)" ]; then
+            cp "$image_path" "$dir1"
           else
-            image_path=$(find "./kernel_workspace/kernel_platform/common/out/" -name "Image" | head -n 1)
+            echo "源文件与目标相同，跳过复制"
           fi
-
-          # 拷贝 Image
-          if [ -n "$image_path" ] && [ -f "$image_path" ]; then
-            mkdir -p "$dir1"
-            if [ "$(realpath "$image_path")" != "$(realpath "$dir1"Image)" ]; then
-              cp "$image_path" "$dir1"
-            else
-              echo "源文件与目标相同，跳过复制"
-            fi
-            cp "$dir1"Image ./AnyKernel3/Image
-          else
-            echo "未找到 Image 文件，构建可能失败"
-            exit 1
-          fi
-
-          # 可选复制其它新文件（如果存在）
-          if [ "${{ github.event.inputs.CPU }}" = "sm8750" ]; then
-          for file in dtbo.img system_dlkm.erofs.img vendor_dlkm.img vendor_boot.img; do
-            if [ -f "$dir1$file" ]; then
-              target_name="$file"
-              # 特殊处理 system_dlkm.erofs.img 的目标名
-              if [ "$file" = "system_dlkm.erofs.img" ]; then
-                target_name="system_dlkm.img"
-              fi
-              cp "$dir1$file" "./AnyKernel3/$target_name"
-            else
-              echo "$file 不存在，跳过复制"
-            fi
-          done
-          fi
+          cp "$dir1"Image ./AnyKernel3/Image
+        else
+          echo "未找到 Image 文件，构建可能失败"
+          exit 1
+        fi
         clean_feil="${FEIL}"
         clean_feil="${clean_feil%_v}"  # 去掉结尾的 _v（如果有）
         clean_feil="${clean_feil%_u}"  # 去掉结尾的 _u（如果有）
         echo "FEIL=$clean_feil" >> $GITHUB_ENV
         echo "VALUE=${{ github.event.inputs.VFS == 'true' && '_VFS' || '' }}${{ github.event.inputs.LSM == 'true' && '_LSM' || '' }}" >> $GITHUB_ENV
-      continue-on-error: true 
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
